# libacb

./: .clang-tidy  .clangd  CMakeLists.txt  LICENSE.md  README.md
include/: acb_cdata.h  acb_cenum.h  acb_enum.h  acb_env.h.in  acb_env_ns.h  acb_env_platform.h  acb_utils.h  cgss_api.h  cgss_capi.h  cgss_cdata.h  cgss_cenum.h  cgss_data.h  cgss_enum.h  cgss_env.h  cgss_env_ns.h  cgss_env_platform.h  cgss_intf.h
include/capi/: CHandleManager.h
include/cdata/: HCA_CIPHER_CONFIG.h  HCA_INFO.h  UTF_FIELD.h
include/cenum/: CGSS_ACB_WAVEFORM_ENCODE_TYPE.h  CGSS_FILE_ACCESS.h  CGSS_FILE_MODE.h  CGSS_HCA_CIPHER_TYPE.h  CGSS_OP_RESULT.h  CGSS_STREAM_SEEK_ORIGIN.h  CGSS_UTF_COLUMN_STORAGE.h  CGSS_UTF_COLUMN_TYPE.h
include/common/: quick_utils.h  type_traits.h
include/ichinose/: CAcbFile.h  CAcbHelper.h  CAfs2Archive.h  CUtfField.h  CUtfReader.h  CUtfTable.h
include/kawashima/hca/: CDefaultWaveGenerator.h  CHcaCipherConfig.h  CHcaCipherConverter.h  CHcaDecoder.h  CHcaDecoderConfig.h  CHcaFormatReader.h  hca_native.h  hca_utils.h
include/kawashima/wave/: wave_native.h
include/takamori/: CBitConverter.h  CFileSystem.h  CPath.h  Utilities.h
include/takamori/exceptions/: CArgumentException.h  CException.h  CFormatException.h  CInvalidOperationException.h  CNotImplementedException.h
include/takamori/streams/: CBinaryReader.h  CBinaryWriter.h  CFileStream.h  CMemoryStream.h  CStream.h  CStreamExtensions.h  IStream.h
src/capi/: CHandleManager.cpp  cgss_capi.cpp
src/ichinose/: CAcbFile.cpp  CAcbHelper.cpp  CAfs2Archive.cpp  CUtfField.cpp  CUtfReader.cpp  CUtfTable.cpp
src/kawashima/hca/: CDefaultWaveGenerator.cpp  CHcaCipherConfig.cpp  CHcaCipherConverter.cpp  CHcaDecoder.cpp  CHcaDecoderConfig.cpp  CHcaFormatReader.cpp  hca_utils.cpp
src/kawashima/hca/internal/: CHcaAth.cpp  CHcaAth.h  CHcaChannel.cpp  CHcaChannel.h  CHcaCipher.cpp  CHcaCipher.h  CHcaData.cpp  CHcaData.h
src/takamori/: CBitConverter.cpp  CFileSystem.cpp  CPath.cpp  Utilities.cpp
src/takamori/exceptions/: CArgumentException.cpp  CException.cpp  CFormatException.cpp  CInvalidOperationException.cpp  CNotImplementedException.cpp
src/takamori/streams/: CBinaryReader.cpp  CBinaryWriter.cpp  CFileStream.cpp  CMemoryStream.cpp  CStream.cpp  CStreamExtensions.cpp
